Fixed one last timer issue and a layout issue

--- a/sass/ticTacTicTacToe.scss
+++ b/sass/ticTacTicTacToe.scss
@@ -319,7 +319,7 @@ h2 {
                 display: table;
                 text-align: left;
                 height: 50px;
-                width: 195px;
+                width: 180px;
                 margin-top: -2px;
             }
 
